k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bmdr-setup
  labels:
    name: bmdr-setup
    environment: production
