k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmdr-app
  namespace: bmdr-setup
spec:
  selector:
    app: bmdr-app
  ports:
  - port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
